fix center align

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .agilephd {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
-  font-align:center;
+  text-align: center;
 }
 
 .pm_image {
